refactor(workflow): 重构工作流访问接口并优化组件初始化
- 引入 ContextAccessor、ExecutionAccessor 和 OutputAccessor 访问器类
- 实现工作流门面模式，提供统一的访问入口
- 将原有的直接组件访问改为分层访问模式
- 添加 WorkflowBuilder 类支持流畅构建方式
- 更新 LoopWorkFlow 构造器使用新的初始化逻辑
- 修改代码中直接访问组件的方式为通过访问器访问
- 添加详细的 JavaDoc 注释说明新的访问模式